[ES-1125] Cherrypicked fixes from develop to release-1.0.x (#134)
* ES-782 (#70)

Signed-off-by: pr <panharith-an@mptc.gov.kh>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

* DSD-4457 (#72)

* fix cookie without secure code

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>

* fix code bug

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>

* update sonar ignore on getChache

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>

* fix null on message

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>

---------

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

* ES 802 (#76)

* Signup service - Changes required in Async notification calls

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>

* throw exception and add test case

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>

---------

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

* ES-973 (#77)

Signed-off-by: pr <panharith-an@mptc.gov.kh>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

* Error message when multiple user attempting to register with same identifier simultaneously should be changed to user friendly message.

Signed-off-by: Sreang Rathanak <sreangrathanajk@yahoo.com>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

* ES-789 (#79)

* add local in request header

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>
Signed-off-by: Mengleang <ngounmengleang18@gmail.com>
Signed-off-by: mengleang-0090 <n.mengleang@dgc.gov.kh>
Signed-off-by: mengleang-0090 <mengleang-ngoun@mptc.gov.kh>

* update wording

Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>
Signed-off-by: Mengleang <ngounmengleang18@gmail.com>
Signed-off-