@@ -24,6 +24,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import javax.servlet.http.Cookie;
@@ -118,6 +119,8 @@ public class RegistrationService {
     @Value("${mosip.signup.get-registration-status.endpoint}")
     private String getRegistrationStatusEndpoint;
 
+    private final String notificationLogging = "Notification response -> {}";
+
     /**
      * Generate and regenerate challenge based on the "regenerate" flag in the request.
      * if regenerate is false - always creates a new transaction and set-cookie header is sent in the response.
@@ -139,7 +142,7 @@ public class RegistrationService {
         if(cacheUtilService.isIdentifierBlocked(identifier))
             throw new SignUpException(ErrorConstants.IDENTIFIER_BLOCKED);
 
-        if(generateChallengeRequest.isRegenerate() == false) {
+        if(!generateChallengeRequest.isRegenerateChallenge()) {
             transactionId = IdentityProviderUtil.createTransactionId(null);
             transaction = new RegistrationTransaction(identifier, generateChallengeRequest.getPurpose());
             //Need to set cookie only when regenerate is false.
@@ -162,11 +165,16 @@ public class RegistrationService {
         if(transaction.getChallengeRetryAttempts() > resendAttempts)
             cacheUtilService.blockIdentifier(transactionId, transaction.getIdentifier(), "blocked");
 
-        notificationHelper.sendSMSNotificationAsync(generateChallengeRequest.getIdentifier(), transaction.getLocale(),
-                        SEND_OTP_SMS_NOTIFICATION_TEMPLATE_KEY, new HashMap<>(){{put("{challenge}", challenge);}})
-                .thenAccept(notificationResponseRestResponseWrapper -> {
-                    log.debug("Notification response -> {}", notificationResponseRestResponseWrapper);
-                });
+        HashMap<String, String> hashMap = new LinkedHashMap<>();
+        hashMap.put("{challenge}", challenge);
+        RestResponseWrapper<NotificationResponse> notificationResponseRest;
+        try{
+            notificationResponseRest = notificationHelper.sendSMSNotification(generateChallengeRequest.getIdentifier(), transaction.getLocale(),
+                    SEND_OTP_SMS_NOTIFICATION_TEMPLATE_KEY, hashMap);
+            log.debug(notificationLogging, notificationResponseRest);
+        }catch (RestClientException e){
+            throw new SignUpException(ErrorConstants.OTP_NOTIFICATION_FAILED);
+        }
         return new GenerateChallengeResponse(ActionStatus.SUCCESS);
     }
 
@@ -243,11 +251,12 @@ public class RegistrationService {
         transaction.setRegistrationStatus(RegistrationStatus.PENDING);
         cacheUtilService.setStatusCheckTransaction(transactionId, transaction);
 
-        notificationHelper.sendSMSNotificationAsync(registerRequest.getUserInfo().getPhone(), transaction.getLocale(),
+        String locale = registerRequest.getLocale() == null ? transaction.getLocale() : registerRequest.getLocale();
+
+        notificationHelper.sendSMSNotificationAsync(registerRequest.getUserInfo().getPhone(), locale,
                         REGISTRATION_SMS_NOTIFICATION_TEMPLATE_KEY, null)
-                .thenAccept(notificationResponseRestResponseWrapper -> {
-                    log.debug("Notification response -> {}", notificationResponseRestResponseWrapper);
-                });
+                .thenAccept(notificationResponseRestResponseWrapper ->
+                        log.debug(notificationLogging, notificationResponseRestResponseWrapper));
 
         RegisterResponse registration = new RegisterResponse();
         registration.setStatus(ActionStatus.PENDING);
@@ -255,9 +264,8 @@ public class RegistrationService {
         return registration;
     }
 
-    public RegistrationStatusResponse updatePassword(ResetPasswordRequest resetPasswordRequest,
-                                           String transactionId) throws SignUpException{
-
+    private RegistrationTransaction getTransaction(
+            ResetPasswordRequest resetPasswordRequest, String transactionId) {
         log.debug("Transaction {} : start reset password", transactionId);
         RegistrationTransaction transaction = cacheUtilService.getChallengeVerifiedTransaction(transactionId);
         if(transaction == null) {
@@ -274,7 +282,11 @@ public class RegistrationService {
             log.error("reset password failed: purpose mismatch in transaction");
             throw new SignUpException(ErrorConstants.UNSUPPORTED_PURPOSE);
         }
+        return transaction;
+    }
 
+    private RestRequestWrapper getRestRequestWrapper(RegistrationTransaction transaction, String transactionId,
+                                 ResetPasswordRequest resetPasswordRequest ) {
         Identity identity = new Identity();
         identity.setUIN(cryptoHelper.symmetricDecrypt(transaction.getUin()));
         identity.setIDSchemaVersion(idSchemaVersion);
@@ -293,7 +305,10 @@ public class RegistrationService {
         restRequest.setRequesttime(IdentityProviderUtil.getUTCDateTime());
         restRequest.setRequest(identityRequest);
 
-        log.debug("Transaction {} : start reset password", transactionId);
+        return restRequest;
+    }
+
+    private void verifyIdentityResponseForResetPassword(RestRequestWrapper restRequest, String transactionId ) {
         HttpEntity<RestRequestWrapper<IdentityRequest>> resReq = new HttpEntity<>(restRequest);
         RestResponseWrapper<IdentityResponse> restResponseWrapper = selfTokenRestTemplate.exchange(identityEndpoint,
                 HttpMethod.PATCH,
@@ -310,17 +325,27 @@ public class RegistrationService {
             log.error("Transaction {} : reset password failed with response {}", transactionId, restResponseWrapper);
             throw new SignUpException(ErrorConstants.RESET_PWD_FAILED);
         }
+    }
+
+    public RegistrationStatusResponse updatePassword(ResetPasswordRequest resetPasswordRequest,
+                                           String transactionId) throws SignUpException{
+        RegistrationTransaction transaction = this.getTransaction(resetPasswordRequest, transactionId);
+        RestRequestWrapper restRequest = this.getRestRequestWrapper(transaction, transactionId, resetPasswordRequest);
+
+        log.debug("Transaction {} : start reset password", transactionId);
+        this.verifyIdentityResponseForResetPassword(restRequest, transactionId);
 
         transaction.getHandlesStatus().put(getHandleRequestId(transaction.getApplicationId(),
                 "phone", resetPasswordRequest.getIdentifier()), RegistrationStatus.PENDING);
         transaction.setRegistrationStatus(RegistrationStatus.PENDING);
         cacheUtilService.setStatusCheckTransaction(transactionId, transaction);
 
-        notificationHelper.sendSMSNotificationAsync(resetPasswordRequest.getIdentifier(), transaction.getLocale(),
+        String locale = resetPasswordRequest.getLocale() == null ? transaction.getLocale() : resetPasswordRequest.getLocale();
+
+        notificationHelper.sendSMSNotificationAsync(resetPasswordRequest.getIdentifier(), locale,
                         FORGOT_PASSWORD_SMS_NOTIFICATION_TEMPLATE_KEY, null)
-                .thenAccept(notificationResponseRestResponseWrapper -> {
-                    log.debug("Notification response -> {}", notificationResponseRestResponseWrapper);
-                });
+                .thenAccept(notificationResponseRestResponseWrapper ->
+                        log.debug(notificationLogging, notificationResponseRestResponseWrapper));
 
         RegistrationStatusResponse resetPassword = new RegistrationStatusResponse();
         resetPassword.setStatus(RegistrationStatus.PENDING);
@@ -445,7 +470,7 @@ public class RegistrationService {
         identity.setPassword(password);
 
         //By default, phone is set as the selected handle.
-        identity.setSelectedHandles(Arrays.asList("phone"));
+        identity.setSelectedHandles(List.of("phone"));
         transaction.getHandlesStatus().put(getHandleRequestId(transaction.getApplicationId(),
                 "phone", userInfoMap.getPhone()), RegistrationStatus.PENDING);
 
@@ -456,7 +481,7 @@ public class RegistrationService {
         addIdentity(identityRequest, transactionId);
     }
 
-    @Timed(value = "addidentity.api.timer", percentiles = {0.95, 0.99})
+    @Timed(value = "addidentity.api.timer", percentiles = {0.9})
     private void addIdentity(IdentityRequest identityRequest, String transactionId) throws SignUpException{
 
         RestRequestWrapper<IdentityRequest> restRequest = new RestRequestWrapper<>();
@@ -482,7 +507,6 @@ public class RegistrationService {
                 restResponseWrapper.getErrors().get(0).getErrorCode() : ErrorConstants.ADD_IDENTITY_FAILED);
     }
 
-    @Timed(value = "generatehash.api.timer", percentiles = {0.95, 0.99})
     private Password generateSaltedHash(String password, String transactionId) throws SignUpException{
 
         RestRequestWrapper<Password.PasswordPlaintext> restRequestWrapper = new RestRequestWrapper<>();
@@ -505,7 +529,7 @@ public class RegistrationService {
                 restResponseWrapper.getErrors().get(0).getErrorCode() : ErrorConstants.HASH_GENERATE_FAILED);
     }
 
-    @Timed(value = "getuin.api.timer", percentiles = {0.95, 0.99})
+    @Timed(value = "getuin.api.timer", percentiles = {0.9})
     private String getUniqueIdentifier(String transactionId) throws SignUpException {
 
         RestResponseWrapper<UINResponse> restResponseWrapper = selfTokenRestTemplate.exchange(getUinEndpoint,
@@ -550,7 +574,7 @@ public class RegistrationService {
         }
     }
 
-    @Timed(value = "getstatus.api.timer", percentiles = {0.95, 0.99})
+    @Timed(value = "getstatus.api.timer", percentiles = {0.9})
     private RegistrationStatus getRegistrationStatusFromServer(String applicationId) {
         RestResponseWrapper<Map<String,String>> restResponseWrapper = selfTokenRestTemplate.exchange(getRegistrationStatusEndpoint,
                 HttpMethod.GET, null,
@@ -587,6 +611,8 @@ public class RegistrationService {
 
         Cookie unsetCookie = new Cookie(SignUpConstants.TRANSACTION_ID, "");
         unsetCookie.setMaxAge(0);
+        cookie.setHttpOnly(true);
+        cookie.setSecure(true);
         response.addCookie(unsetCookie);
     }
 
